fix page-icon-medium being too large on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -503,6 +503,10 @@ footer * p {
   .header-image {
     height: 300px;
   }
+
+  .page-icon-medium {
+    width: 10%;
+  }
 }
 
 /* DESKTOP */
